# scontrini

./: .gitignore  .htaccess  .htaccess-simple  ARMONIZZAZIONE_NOMI_SCONTRINI.md  CONFIGURAZIONE.md  COSTANTI_CONFIG.md  DOCUMENTAZIONE_FOTO_SCONTRINI.md  Dockerfile  FILTRI_AVANZATI_README.md  FIX_CAMPO_NETTO_RISOLTO.md  FIX_COLONNA_ATTIVO.md  FIX_DATABASE_QUERY.md  FIX_RIATTIVAZIONE_RISOLTO.md  GESTIONE_MULTI_UTENTE.md  GPS_FILENAME_IMPLEMENTATION.md  GUIDA_SETUP.md  IMPLEMENTAZIONE_COMPLETATA.md  IMPORT_EXCEL_UPDATES_v2.md  INSTALLAZIONE_COMPLETATA.md  MOBILE_FOTO_IMPLEMENTATION.md  PERMISSIONS_README.md  PROBLEMI_RISOLTI.md  README.md  README_FILIALI.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  SCHEMA_ALIGNMENT_COMPLETED.md  SCRIPTS_README.md  SISTEMA_AUTORIZZAZIONI.md  SKIP_INSTALLATION_FEATURES.md  SQL_DELIMITER_RESOLUTION.md  TROUBLESHOOTING.md  aggiungi-mobile.php  aggiungi.php  aggiungi_utente.php  align_schema.php  annulla_incasso.php  annulla_versamento.php  archivia.php  archivio.php  (+66 more)
api/: debug-nomi-scontrini.php  excel-template.php  import-excel-massivo.php  nomi-scontrini.php  scontrino-dettagli.php  test-bootstrap.php  test-database.php  test-nomi-no-auth.php  test-simple.php
includes/: auth.php  bootstrap.php  database.php  image_manager.php  installation_check.php  layout.php  php_compatibility.php  scontrino_dettagli.php  utils.php
install/: INSTALLATION_GUIDE.md  INSTALLATION_README.md  README.md  TRIGGERS_README.md  TROUBLESHOOTING_DATABASE.md  backup.php  cli_installer.php  config_template.php  database_schema.sql  debug_connection.php  (+3 more)
(+32 files in other folders)
