[tool.poetry]
name = "scontrini"
version = "0.1.0"
description = "Una web app per la gestione degli scontrini."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
Flask = "^3.0.3"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
